--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@
         <h1>Equipo de Trabajo</h1>
     </header>
     <nav>
-        <a href="revista.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="cuerpo.html">revista</a>
         <a href="contacto.html">presentación</a>
     </nav>
