--- a/cuerpo.html
+++ b/cuerpo.html
@@ -22,7 +22,7 @@
         <h1>Mi Revista Digital</h1>
     </header>
     <nav>
-        <a href="revista.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="nosotros.html">Sobre Nosotros</a>
         <a href="#Metaverso">presentación</a>
     </nav>
