--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 <body>
     <div id="popup" class="popup">
         <div class="popup-content">
-            <h2>Activa la Experiencia Completa</h2>
-            <p>Haz clic en el botón de abajo para activar la experiencia completa, incluyendo la música de fondo.</p>
-            <button onclick="activateExperience()">Activar</button>
+            <h2>Bienvenido estimado usuario</h2>
+            <p>Revista generada para explicar el metaverso.</p>
+            <button onclick="activateExperience()">General</button>
         </div>
     </div>
     <div id="login-container" class="login-container" style="display: none;">
@@ -45,7 +45,7 @@
         <button class="login-button" onclick="showWelcomeMessage()">Inicio</button>
     </div>
     <div id="welcome-message" class="welcome-message">
-        <h2>Bienvenido a la Futurista Revista Digital</h2>
+        <h2>Hola...</h2>
         <p>Preparando el contenido para ti...</p>
     </div>
     <div class="audio-player">
