--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <h1>Bienvenidos a Mi Revista Digital</h1>
         <button class="login-button" onclick="showWelcomeMessage()">Inicio</button>
     </div>
+
+     <div id="video-container" style="width: 100%; max-width: 600px; margin: auto;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dgK8CejZzZA?si=nDK1C4wPGc9PEQU3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <div id="welcome-message" class="welcome-message">
         <h2>Hola...</h2>
         <p>Preparando el contenido para ti...</p>
