--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             }, 3000);
         }
 
-        function activateExperience() {
-            playAudio();
+        //function activateExperience() {
+            /*playAudio();
             document.getElementById('popup').style.display = 'none';
             document.getElementById('login-container').style.display = 'block';
         }
 
         window.onload = function() {
             document.getElementById('popup').style.display = 'flex';
-        }
+        }*/
     </script>
 </head>
 <body>
