--- a/cuerpo.html
+++ b/cuerpo.html
@@ -29,6 +29,9 @@
     <main>
         <section id="articulo1">
             <h2>Metaverso</h2>
+             <div id="video-container" style="width: 100%; max-width: 600px; margin: auto;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dgK8CejZzZA?si=nDK1C4wPGc9PEQU3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
             <p>El metaverso es un entorno virtual inmersivo y compartido que utiliza tecnologías avanzadas como la realidad virtual (VR), la realidad aumentada (AR) y la inteligencia artificial (IA). En este espacio, los usuarios pueden interactuar a través de avatares digitales, participar en actividades diversas y experimentar una realidad alternativa.</p>
         </section>
         <section id="articulo2">
