--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
     <nav>
         <a href="index.html">Inicio</a>
         <a href="cuerpo.html">revista</a>
-        <a href="recursos/Presentacion Metaverso.pdf">presentación</a>
+        <a href="pdf.html">presentación</a>
     </nav>
     <main>
         <section id="equipo">
